[gd_scene load_steps=7 format=2]

[ext_resource path="res://LevelSelector.gd" type="Script" id=1]
[ext_resource path="res://art/mini_dragon1_cleaned.png" type="Texture" id=2]
[ext_resource path="res://art/mini_dragon1_cleaned_transparent.png" type="Texture" id=3]
[ext_resource path="res://art/DALLÂ·E 2022-07-15 18.57.39 - parchment paper texture.png" type="Texture" id=4]
[ext_resource path="res://fonts/pixel-craft-font/PixelCraft-2Odxo.otf" type="DynamicFontData" id=5]

[sub_resource type="DynamicFont" id=1]
size = 40
font_data = ExtResource( 5 )

[node name="LevelSelector" type="Node"]
script = ExtResource( 1 )

[node name="BackgroundTexture" type="TextureRect" parent="."]
margin_right = 634.0
margin_bottom = 394.0
texture = ExtResource( 4 )

[node name="Level1" type="TextureButton" parent="BackgroundTexture"]
margin_left = 458.0
margin_top = 819.0
margin_right = 1482.0
margin_bottom = 1843.0
rect_scale = Vector2( 0.1, 0.1 )
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 2 )

[node name="Level2" type="TextureButton" parent="BackgroundTexture"]
margin_left = 293.0
margin_top = 709.0
margin_right = 1317.0
margin_bottom = 1733.0
rect_scale = Vector2( 0.1, 0.1 )
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 2 )

[node name="Level3" type="TextureButton" parent="BackgroundTexture"]
margin_left = 658.0
margin_top = 703.0
margin_right = 1682.0
margin_bottom = 1727.0
rect_scale = Vector2( 0.1, 0.1 )
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 2 )

[node name="Label" type="Label" parent="BackgroundTexture"]
margin_left = 359.0
margin_top = 930.0
margin_right = 682.0
margin_bottom = 1006.0
custom_fonts/font = SubResource( 1 )
text = "Pick your level"

[connection signal="pressed" from="BackgroundTexture/Level1" to="." method="_on_Level1_pressed"]
[connection signal="pressed" from="BackgroundTexture/Level2" to="." method="_on_Level2_pressed"]
[connection signal="pressed" from="BackgroundTexture/Level3" to="." method="_on_Level3_pressed"]
